--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,7 @@
+#
+# Copyright (c) 2024 Ashley B (uwuvern)
+#
+# This project is licensed under the MIT license, check the LICENSE file in the root of the project for more information.
+#
+
 kotlin.code.style=official
