--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,9 @@
+#
+# Copyright (c) 2024 Ashley B (uwuvern)
+#
+# This project is licensed under the MIT license, check the LICENSE file in the root of the project for more information.
+#
+
 #Sun Feb 04 08:32:48 GMT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
